# Chemical-simulator

./: .gitignore  CMakeLists.txt  README.md  benchmarks  interface.cpp  interface.h  linux_installer  main.cpp  memory_monitor.h  restrict.h
.github/workflows/: build.yml  release.yml
App/: Application.cpp  Application.h  CreateDebugPanels.cpp  CreateDebugPanels.h  Scenes.h  UpdateDebugData.cpp
App/debug/: CreateDebugPanels.cpp  CreateDebugPanels.h  UpdateDebugData.cpp  UpdateDebugData.h
Benchmarks/: BenchmarkCase.h  BenchmarkScenes.cpp  BenchmarkScenes.h  CMakeLists.txt  bench.py  bench_main.cpp  compare_bench.py  view.html
Benchmarks/fixtures/: RendererFixture.h  SimulationFixture.h
Benchmarks/physics/: BM_ComputeForces.cpp  BM_Correct.cpp  BM_NeighborListRebuild.cpp  BM_PredictAndSync.cpp  BM_SimulationStep.cpp
Benchmarks/rendering/: BM_DrawShot.cpp
Engine/: Camera.cpp  Renderer.cpp  SimBox.cpp  SimBox.h  Simulation.cpp  Simulation.h  Tools.cpp  Tools.h
Engine/debug_panel/: DebugEntry.h  DebugPanel.cpp
Engine/gui/interface/debug_panel/: DebugPanel.h
Engine/gui/interface/debug_panel/view/: DebugView.cpp  DebugView.h
Engine/gui/interface/file_dialog/: FileDialogManager.cpp  FileDialogManager.h
Engine/gui/interface/sim_control_panel/: SimControlPanel.cpp  SimControlPanel.h
Engine/gui/interface/tools_panel/: ToolsPanel.cpp
Engine/io/: Keyboard.cpp  Mouse.cpp  Mouse.h
Engine/io/mouse/: Mouse.cpp  Mouse.h
Engine/math/: Graph.cpp  Ray.h  Vec2D.cpp  Vec2D.h  Vec2f.h  Vec3D.cpp  Vec3D.h  Vec3f.h
Engine/metrics/: MemoryMetrics.h  NeighborListMetrics.h
Engine/physics/: Atom.cpp  Atom.h  AtomData.cpp  AtomData.h  AtomStorage.h  Bond.cpp  Bond.h  ForceField.cpp  ForceField.h  Integrator.cpp  Integrator.h  NeighborList.cpp  NeighborList.h  SpatialGrid.cpp  SpatialGrid.h
Engine/physics/integrators/: KDKScheme.cpp  KDKScheme.h  LangevinScheme.cpp  LangevinScheme.h  RK4Scheme.cpp  RK4Scheme.h  StepOps.h  VerletScheme.cpp  VerletScheme.h
Engine/renderer/: BaseRenderer.h  Renderer2D.cpp  Renderer2D.h
Engine/renderer/2d/: Renderer2D.cpp  Renderer2D.h
Engine/selection/: OverlayState.h
Engine/tools/: Tools.cpp  Tools.h
Engine/tools/picking_system/: PickingSystem.cpp  PickingSystem.h
Engine/utils/: RateCounter.h  Time.cpp  Time.h  Timer.h
GUI/interface/: interface.cpp  interface.h
GUI/interface/file_dialog/: FileDialogManager.cpp  FileDialogManager.h
GUI/interface/font_manager/: FontManager.cpp  FontManager.h
GUI/interface/panels/debug/: DebugDrawers.h  DebugEntry.h  DebugPanel.cpp
GUI/interface/panels/debug/view/: DebugView.cpp  DebugView.h
GUI/interface/panels/settings/: SettingsPanel.cpp
GUI/interface/panels/tools/: SideToolsPanel.cpp  SideToolsPanel.h  ToolsPanel.cpp  ToolsPanel.h
GUI/io/keyboard/: Keyboard.cpp  Keyboard.h  KeyboardCommand.h
GUI/io/manager/: EventManager.cpp  EventManager.h
GUI/io/mouse/: Mouse.cpp  Mouse.h
GUI/io/window_events/: WindowEvents.cpp  WindowEvents.h
Rendering/: BaseRenderer.h  RendererGL.cpp  RendererGL.h
Rendering/2d/: Renderer2D.cpp  Renderer2D.h
Rendering/2d/shaders/: atom.frag  atom.vert  force_shader.frag
Rendering/3d/: Renderer3D.cpp  Renderer3D.h
Rendering/3d/shaders/: atom.frag  atom.vert  bond.frag  bond.geom  bond.vert  box.frag  box.vert  grid.frag  grid.vert
Rendering/camera/: Camera.cpp  Camera.h
assets/shaders/2d/: atom.frag
assets/shaders/3d/: atom.frag
