cmake_minimum_required(VERSION 3.17)
project(Chemical-simulator)
option(OPTIMIZE_FOR_NATIVE "Enable -march=native optimization" ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# CMake 4.x: allow legacy dependencies that declare very old minimum policies.
if(CMAKE_VERSION VERSION_GREATER_EQUAL "4.0")
    set(CMAKE_POLICY_VERSION_MINIMUM 3.5)
endif()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")

if (WIN32)
    set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build static libraries on Windows" FORCE)
    set(SFML_USE_STATIC_STD_LIBS ON CACHE BOOL "Use static std libs" FORCE)
else()
    set(BUILD_SHARED_LIBS ON CACHE BOOL "Build shared libraries on Unix" FORCE)
endif()

include(FetchContent)

unset(IMGUI_INCLUDE_DIR CACHE)
unset(IMGUI_SFML_CONFIG_DIR CACHE)
unset(imgui_SOURCE_DIR CACHE)
unset(imgui_BINARY_DIR CACHE)

find_package(OpenGL REQUIRED)

# --- Настройка SFML ---
FetchContent_Declare(
    sfml
    GIT_REPOSITORY https://github.com/SFML/SFML.git
    GIT_TAG        3.0.2
)
set(SFML_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(SFML_BUILD_DOC OFF CACHE BOOL "" FORCE)
set(SFML_INSTALL_PKGCONFIG_FILES OFF CACHE BOOL "" FORCE)

FetchContent_MakeAvailable(sfml)

# --- Настройка ImGui ---
FetchContent_Declare(
    imgui
    GIT_REPOSITORY https://github.com/ocornut/imgui.git
    GIT_TAG        v1.91.9
)
FetchContent_MakeAvailable(imgui)
add_library(imgui STATIC
    ${imgui_SOURCE_DIR}/imgui.cpp
    ${imgui_SOURCE_DIR}/imgui_draw.cpp
    ${imgui_SOURCE_DIR}/imgui_tables.cpp
    ${imgui_SOURCE_DIR}/imgui_widgets.cpp
    ${imgui_SOURCE_DIR}/backends/imgui_impl_opengl3.cpp
)
include_directories(${imgui_SOURCE_DIR})

# --- Настройка ImGui-SFML ---
FetchContent_Declare(
    imgui-sfml
    GIT_REPOSITORY https://github.com/SFML/imgui-sfml.git
    GIT_TAG        v3.0
)
set(IMGUI_SFML_FIND_SFML OFF CACHE BOOL "" FORCE)
set(IMGUI_SFML_IF_FETCHCONTENT ON CACHE BOOL "" FORCE)
set(IMGUI_DIR ${imgui_SOURCE_DIR} CACHE PATH "" FORCE)
set(IMGUI_INCLUDE_DIR ${imgui_SOURCE_DIR} CACHE PATH "" FORCE)

FetchContent_MakeAvailable(imgui-sfml)

# --- Настройка ImGuiFileDialog ---
FetchContent_Declare(
    ImGuiFileDialog
    GIT_REPOSITORY https://github.com/aiekick/ImGuiFileDialog.git
    GIT_TAG        v0.6.8
)
FetchContent_Populate(ImGuiFileDialog)
add_library(ImGuiFileDialog_lib STATIC
    ${imguifiledialog_SOURCE_DIR}/ImGuiFileDialog.cpp
)
target_include_directories(ImGuiFileDialog_lib PUBLIC
    ${imguifiledialog_SOURCE_DIR}
    ${imgui_SOURCE_DIR}
)
target_link_libraries(ImGuiFileDialog_lib PUBLIC imgui)

# --- Настройка glad ---
FetchContent_Declare(
    glad
    GIT_REPOSITORY https://github.com/Dav1dde/glad.git
    GIT_TAG        v0.1.36
)
FetchContent_MakeAvailable(glad)

# --- Настройка GLM ---
FetchContent_Declare(
    glm
    GIT_REPOSITORY https://github.com/g-truc/glm.git
    GIT_TAG        1.0.1
)
FetchContent_MakeAvailable(glm)

file(GLOB_RECURSE CORE_SOURCES CONFIGURE_DEPENDS
    "Engine/*.cpp"
    "GUI/*.cpp"
    "Rendering/*.cpp"
    "App/*.cpp"
)
list(FILTER CORE_SOURCES EXCLUDE REGEX "build/.*")

add_library(chemical_simulator_lib STATIC ${CORE_SOURCES})

if(OPTIMIZE_FOR_NATIVE)
    target_compile_options(chemical_simulator_lib PRIVATE -O3 -march=native)
    else()
    target_compile_options(chemical_simulator_lib PRIVATE -O3)
endif()


target_include_directories(chemical_simulator_lib PUBLIC
    ${CMAKE_SOURCE_DIR}
    ${imgui_SOURCE_DIR}
    ${imgui_SOURCE_DIR}/backends
    ${imguifiledialog_SOURCE_DIR}
)

target_link_libraries(chemical_simulator_lib PUBLIC
    sfml-graphics 
    sfml-window 
    sfml-system 
    sfml-network 
    sfml-audio
    ImGui-SFML::ImGui-SFML
    ImGuiFileDialog_lib
    glad
    OpenGL::GL
    glm::glm
)

add_executable(${CMAKE_PROJECT_NAME} main.cpp)

if(OPTIMIZE_FOR_NATIVE)
    target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE -O3 -march=native)
else()
    target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE -O3)
endif()

if (WIN32)
    set(APP_ICON_RESOURCE "${CMAKE_CURRENT_SOURCE_DIR}/assets/app_icon.rc")
    if(EXISTS "${APP_ICON_RESOURCE}")
        source_group("Resource Files" FILES "${APP_ICON_RESOURCE}")        
        target_sources(${CMAKE_PROJECT_NAME} PRIVATE "${APP_ICON_RESOURCE}")
    else()
        message(WARNING "Resource file not found: ${APP_ICON_RESOURCE}")
    endif()
endif()

target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE chemical_simulator_lib)

option(BUILD_BENCHMARKS "Build benchmarks" OFF)
if(BUILD_BENCHMARKS)
    FetchContent_Declare(
        googlebenchmark
        GIT_REPOSITORY https://github.com/google/benchmark.git
        GIT_TAG        v1.9.5
    )
    set(BENCHMARK_ENABLE_TESTING     OFF CACHE BOOL "" FORCE)
    set(BENCHMARK_ENABLE_GTEST_TESTS OFF CACHE BOOL "" FORCE)
    set(BENCHMARK_ENABLE_INSTALL     OFF CACHE BOOL "" FORCE)
 
    FetchContent_MakeAvailable(googlebenchmark)
 
    add_subdirectory(Benchmarks)
endif()
